# FATURAMENTO-APP

./: .env.example  .gitignore  .replit  Dockerfile  RUNBOOK.md  SISTEMA.md  app.db  docker-compose.yml  dump.sql  internal.db  proposta_comercial.md  pyproject.toml  replit.md  requirements.txt  sql_folha_pagamento.md
DocsAcelera/: Cronograma.md  Documento_de_Intencao.md  Fluxograma.md  Stack_Tecnologica.md  Telas_Wireframes.md
app/: config.py  db.py  main.py  session_manager.py
app/models/: __init__.py  benefit_record.py  billing.py  customer.py  employee.py  epi_purchase.py  exam_record.py  integrations.py  medical_exam.py  report.py  time_record.py  user.py
app/routers/: __init__.py  auth.py  billing.py  customers.py  data_upload.py  epi_purchases.py  health.py  integrations.py  (+3 more)
attached_assets/: Pasted--File-usr-local-lib-python3-11-importlib-init-py-line-1_1773756835497.txt  Pasted--Quero-criar-um-backend-em-FastAPI-SQLAlchemy-SQLite-para-gerenciar-dados-de-faturamento-de-RH--1764341988655_1764341988656.txt  Pasted-Quero-esclarecer-definitivamente-como-deve-funcionar-a-integra-o-com-o-banco-Senior-1-A-API-N-1764610533048_1764610533048.txt  Pasted-Tenho-um-projeto-FastAPI-rodando-e-j-tenho-um-m-dulo-de-integra-o-com-a-Senior-que-funciona-com-e-1764680317043_1764680317044.txt  Pasted-Voc-um-assistente-de-c-digo-no-Replit-Quero-criar-um-backend-em-Python-FastAPI-que--1764595761737_1764595761738.txt  Pasted-const-data-agruparPorMatricula-response-map-item-const-_1765197821408.txt  recargas_periodo-aca3320a-8675-47dd-b0aa-b775730b578e-2025-11-_1766504646347.csv
(+62 files in other folders)
